--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docker:prod": "docker-compose -f docker-compose.yml up -d --build",
+    "docker:dev": "docker-compose -f docker-compose.dev.yml up -d --build"
   },
   "eslintConfig": {
     "extends": [
